[tool.poetry]
name = "janlp"  # the directory of the project source root (here `janlp`)
version = "0.1.0"
description = "A FastAPI application for Japanese tokenization and dictionary lookup"
authors = ["Hao Wang <hwang.phy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.0"
pydantic = "^2.8.2"
httptools = "^0.6.0"
jamdict = "^0.1a11"
jamdict-data = "^1.5"
fugashi = {version="^1.3.2", extras=["unidic"]}
jaconv = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"